--- a/src/main/resources/LugarABMC.fxml
+++ b/src/main/resources/LugarABMC.fxml
@@ -1,11 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dario.java.std.jdbc.LugarABMCController">
-    
-</AnchorPane>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dario.java.std.jdbc.LugarABMCController">
+   <center>
+      <SplitPane dividerPositions="0.6237458193979933" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <ListView fx:id="listLugares" layoutX="-94.0" layoutY="-86.0" prefHeight="486.0" prefWidth="464.0" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <GridPane layoutX="11.0" layoutY="14.0" prefHeight="128.0" prefWidth="200.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Id" />
+                        <Label text="Dirección" GridPane.rowIndex="2" />
+                        <Label text="Router" GridPane.rowIndex="3" />
+                        <TextField fx:id="idTxt" GridPane.columnIndex="1" />
+                        <TextField fx:id="txtDireccion" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="txtRouter" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="txtResponsable" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label text="Responsable" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
+                  <GridPane layoutX="11.0" layoutY="167.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Button fx:id="btnCancelar" layoutX="146.0" layoutY="167.0" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" GridPane.columnIndex="2" />
+                        <Button fx:id="btnNuevo" layoutX="11.0" layoutY="167.0" mnemonicParsing="false" onAction="#nuevo" text="Nuevo" />
+                        <Button fx:id="btnGrabar" layoutX="85.0" layoutY="167.0" mnemonicParsing="false" onAction="#grabar" text="Grabar" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </center>
+</BorderPane>
