--- a/src/main/resources/LugarABMC.fxml
+++ b/src/main/resources/LugarABMC.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -14,7 +15,7 @@
                   <ListView fx:id="listLugares" layoutX="-94.0" layoutY="-86.0" prefHeight="486.0" prefWidth="464.0" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="289.0">
                <children>
                   <GridPane layoutX="11.0" layoutY="14.0" prefHeight="128.0" prefWidth="200.0">
                     <columnConstraints>
@@ -38,21 +39,14 @@
                         <Label text="Responsable" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
-                  <GridPane layoutX="11.0" layoutY="167.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <Button fx:id="btnCancelar" layoutX="146.0" layoutY="167.0" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" GridPane.columnIndex="2" />
-                        <Button fx:id="btnNuevo" layoutX="11.0" layoutY="167.0" mnemonicParsing="false" onAction="#nuevo" text="Nuevo" />
-                        <Button fx:id="btnGrabar" layoutX="85.0" layoutY="167.0" mnemonicParsing="false" onAction="#grabar" text="Grabar" GridPane.columnIndex="1" />
-                     </children>
-                  </GridPane>
+                  <ToolBar layoutX="-8.0" layoutY="191.0">
+                     <items>
+                        <Button fx:id="btnNuevo" layoutX="-8.0" layoutY="191.0" mnemonicParsing="false" onAction="#nuevo" text="Nuevo" />
+                        <Button fx:id="btnGrabar" layoutX="43.0" layoutY="191.0" mnemonicParsing="false" onAction="#grabar" text="Grabar" />
+                        <Button fx:id="btnCancelar" layoutX="95.0" layoutY="191.0" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+                        <Button fx:id="btnBorrar" layoutX="157.0" layoutY="191.0" mnemonicParsing="false" onAction="#borrar" text="Borrar" />
+                     </items>
+                  </ToolBar>
                </children>
             </AnchorPane>
         </items>
